styling mobile header

--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | Sunnyside agency landing page</title>
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <div class="slice-bg">
       <div class="container">
-        <header class="header row--mobile">
-          <img src="images/logo.svg" alt="sunnyside" class="nav__logo" />
-          <img
-            src="images/icon-hamburger.svg"
-            alt="open navigation"
-            class="nav__burger"
-          />
+        <header class="header">
+          <div class="row--mobile">
+            <img src="images/logo.svg" alt="sunnyside" class="nav__logo" />
+            <img
+              src="images/icon-hamburger.svg"
+              alt="open navigation"
+              class="nav__burger"
+            />
+          </div>
           <nav class="nav row">
-            <ul class="nav__list">
+            <ul class="nav__list hide">
               <li class="nav__item"><a href="" class="nav__link">About</a></li>
               <li class="nav__item">
                 <a href="" class="nav__link">Services</a>
