more mobile styling

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
               photographers, videographers, and copywriters, we’ll build and
               extend your brand in digital places.
             </p>
-            <a class="section__link" href="#">Learn more</a>
+            <a class="section__link section__link--pink" href="#">Learn more</a>
           </div>
         </div>
       </div>
       <div class="section row">
-        <div class="container">
-          <div class="cherry-bg">
+        <div class="cherry-bg">
+          <div class="container">
             <div class="section__content">
               <h2 class="section__title green">Graphic design</h2>
               <p class="section__text green">
@@ -98,7 +98,9 @@
               </p>
             </div>
           </div>
-          <div class="orange-bg">
+        </div>
+        <div class="orange-bg">
+          <div class="container">
             <div class="section__content">
               <h2 class="section__title blue">Photography</h2>
               <p class="section__text blue">
