--- a/index.html
+++ b/index.html
@@ -114,14 +114,16 @@
       <div class="section">
         <div class="container">
           <div class="row">
-            <h2 class="section__title">Client testimonials</h2>
+            <h2 class="section__title section__title--test">
+              Client testimonials
+            </h2>
             <div class="test">
               <img
                 src="images/image-emily.jpg"
                 alt="emily r."
                 class="test__img"
               />
-              <p class="test__quote">
+              <p class="test__quote section__text">
                 We put our trust in Sunnyside and they delivered, making sure
                 our needs were met and deadlines were always hit.
               </p>
@@ -145,7 +147,7 @@
               <img
                 src="images/image-jennie.jpg"
                 alt="jennie f."
-                src="test__img"
+                class="test__img"
               />
               <p class="test__quote">
                 Incredible end result! Our sales increased over 400% when we
@@ -159,27 +161,33 @@
       </div>
 
       <div class="section gallery row">
-        <div class="container">
-          <img
-            src="images/mobile/image-gallery-milkbottles.jpg"
-            alt="milk bottles"
-            class="gallery__image"
-          />
-          <img
-            src="images/mobile/image-gallery-orange.jpg"
-            alt="orange slice in a bowl"
-            class="gallery__image"
-          />
-          <img
-            src="images/mobile/image-gallery-cone.jpg"
-            alt="ice cream cone"
-            class="gallery__image"
-          />
-          <img
-            src="images/mobile/image-gallery-sugar-cubes.jpg"
-            alt="stacked sugar cubes"
-            class="gallery__image"
-          />
+        <div class="row--mobile">
+          <div class="gallery__image">
+            <img
+              src="images/mobile/image-gallery-milkbottles.jpg"
+              alt="milk bottles"
+            />
+          </div>
+          <div class="gallery__image">
+            <img
+              src="images/mobile/image-gallery-orange.jpg"
+              alt="orange slice in a bowl"
+            />
+          </div>
+        </div>
+        <div class="row--mobile">
+          <div class="gallery__image">
+            <img
+              src="images/mobile/image-gallery-cone.jpg"
+              alt="ice cream cone"
+            />
+          </div>
+          <div class="gallery__image">
+            <img
+              src="images/mobile/image-gallery-sugar-cubes.jpg"
+              alt="stacked sugar cubes"
+            />
+          </div>
         </div>
       </div>
     </main>
@@ -187,14 +195,18 @@
     <footer class="footer">
       <div class="container">
         <img src="images/logo.svg" alt="sunnyside" class="footer__logo" />
-        <ul class="footer__nav-list">
+        <ul class="footer__nav-list row--mobile">
           <li class="footer__nav-item">
             <a href="#" class="footer__nav-link">About</a>
+          </li>
+          <li class="footer__nav-item">
             <a href="#" class="footer__nav-link">Services</a>
+          </li>
+          <li class="footer__nav-item">
             <a href="" class="footer__nav-link">Projects</a>
           </li>
         </ul>
-        <ul class="footer__socials">
+        <ul class="footer__socials row--mobile">
           <li class="socials__item">
             <a href="#" class="socials__link">
               <img
