--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
         <header class="header">
           <div class="row--mobile">
             <img src="images/logo.svg" alt="sunnyside" class="nav__logo" />
-            <img
-              src="images/icon-hamburger.svg"
-              alt="open navigation"
-              class="nav__burger"
-            />
+            <a class="nav__burger" href="#">
+              <img
+                src="images/icon-hamburger.svg"
+                alt="open navigation"
+                id="burger"
+              />
+            </a>
           </div>
-          <nav class="nav row">
-            <ul class="nav__list hide">
-              <li class="nav__item"><a href="" class="nav__link">About</a></li>
+          <nav class="nav row hide" id="mobile-nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="" class="nav__link">About</a>
+              </li>
               <li class="nav__item">
                 <a href="" class="nav__link">Services</a>
               </li>
@@ -246,5 +250,6 @@
         </ul>
       </div>
     </footer>
+    <script src="main.js"></script>
   </body>
 </html>
