tablet layout done

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               />
             </a>
           </div>
-          <nav class="nav row hide" id="mobile-nav">
+          <nav class="nav hide" id="mobile-nav">
             <ul class="nav__list">
               <li class="nav__item">
                 <a href="" class="nav__link">About</a>
@@ -62,10 +62,10 @@
     </div>
 
     <main>
-      <div class="section row">
-        <img src="images/mobile/image-transform.jpg" class="section__img" />
-        <div class="container">
-          <div class="section__content">
+      <div class="section row reverse">
+        <div class="section__img-container"></div>
+        <div class="section__content">
+          <div class="container">
             <h2 class="section__title">Transform your brand</h2>
             <p class="section__text">
               We are a full-service creative agency specializing in helping
@@ -77,9 +77,9 @@
         </div>
       </div>
       <div class="section row">
-        <img src="images/mobile/image-stand-out.jpg" class="section__img" />
-        <div class="container">
-          <div class="section__content">
+        <div class="section__img-container"></div>
+        <div class="section__content">
+          <div class="container">
             <h2 class="section__title">Stand out to the right audience</h2>
             <p class="section__text">
               Using a collaborative formula of designers, researchers,
@@ -92,8 +92,8 @@
       </div>
       <div class="section row">
         <div class="cherry-bg">
-          <div class="container">
-            <div class="section__content">
+          <div class="section__content">
+            <div class="container">
               <h2 class="section__title green">Graphic design</h2>
               <p class="section__text green">
                 Great design makes you memorable. We deliver artwork that
@@ -104,8 +104,8 @@
           </div>
         </div>
         <div class="orange-bg">
-          <div class="container">
-            <div class="section__content">
+          <div class="section__content">
+            <div class="container">
               <h2 class="section__title blue">Photography</h2>
               <p class="section__text blue">
                 Increase your credibility by getting the most stunning,
@@ -117,10 +117,10 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="row">
-            <h2 class="section__title section__title--test">
-              Client testimonials
-            </h2>
+          <h2 class="section__title section__title--test">
+            Client testimonials
+          </h2>
+          <div class="row row--test">
             <div class="test">
               <img
                 src="images/image-emily.jpg"
@@ -129,7 +129,7 @@
               />
               <p class="test__quote section__text">
                 We put our trust in Sunnyside and they delivered, making sure
-                our needs were met and deadlines were always hit.
+                our needs were met and deadlines were always hit.<br /><br />
               </p>
               <p class="test__name">Emily R.</p>
               <p class="test__job">Marketing Director</p>
@@ -155,7 +155,7 @@
               />
               <p class="test__quote">
                 Incredible end result! Our sales increased over 400% when we
-                worked with Sunnyside. Highly recommended!
+                worked with Sunnyside. <br />Highly recommended!
               </p>
               <p class="test__name">Jennie F.</p>
               <p class="test__job">Business Owner</p>
