desktop nav done

--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
   <body>
     <div class="slice-bg">
       <div class="container">
-        <header class="header">
-          <div class="row--mobile">
-            <img src="images/logo.svg" alt="sunnyside" class="nav__logo" />
-            <a class="nav__burger" href="#">
-              <img
-                src="images/icon-hamburger.svg"
-                alt="open navigation"
-                id="burger"
-              />
-            </a>
-          </div>
+        <header class="header row--mobile">
+          <img src="images/logo.svg" alt="sunnyside" class="nav__logo" />
+          <a class="nav__burger" href="#">
+            <img
+              src="images/icon-hamburger.svg"
+              alt="open navigation"
+              id="burger"
+            />
+          </a>
           <nav class="nav hide" id="mobile-nav">
             <ul class="nav__list">
               <li class="nav__item">
