--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
       </div>
       <div class="section row">
         <div class="cherry-bg">
-          <div class="section__content">
+          <div class="section__content section__content--two-cols">
             <div class="container">
-              <h2 class="section__title green">Graphic design</h2>
+              <h2 class="section__title section__title--two-cols green">
+                Graphic design
+              </h2>
               <p class="section__text green">
                 Great design makes you memorable. We deliver artwork that
                 underscores your brand message and captures potential clients’
@@ -102,9 +104,11 @@
           </div>
         </div>
         <div class="orange-bg">
-          <div class="section__content">
+          <div class="section__content section__content--two-cols">
             <div class="container">
-              <h2 class="section__title blue">Photography</h2>
+              <h2 class="section__title section__title--two-cols blue">
+                Photography
+              </h2>
               <p class="section__text blue">
                 Increase your credibility by getting the most stunning,
                 high-quality photos that improve your business image.
@@ -125,7 +129,7 @@
                 alt="emily r."
                 class="test__img"
               />
-              <p class="test__quote section__text">
+              <p class="test__quote">
                 We put our trust in Sunnyside and they delivered, making sure
                 our needs were met and deadlines were always hit.<br /><br />
               </p>
@@ -164,32 +168,16 @@
 
       <div class="section gallery row">
         <div class="row--mobile">
-          <div class="gallery__image">
-            <img
-              src="images/mobile/image-gallery-milkbottles.jpg"
-              alt="milk bottles"
-            />
-          </div>
-          <div class="gallery__image">
-            <img
-              src="images/mobile/image-gallery-orange.jpg"
-              alt="orange slice in a bowl"
-            />
-          </div>
+          <div class="gallery__img-container"></div>
+          <div class="gallery__img-container"></div>
         </div>
         <div class="row--mobile">
-          <div class="gallery__image">
-            <img
-              src="images/mobile/image-gallery-cone.jpg"
-              alt="ice cream cone"
-            />
-          </div>
-          <div class="gallery__image">
-            <img
-              src="images/mobile/image-gallery-sugar-cubes.jpg"
-              alt="stacked sugar cubes"
-            />
-          </div>
+          <div
+            class="gallery__img-container gallery__img-container--row-2"
+          ></div>
+          <div
+            class="gallery__img-container gallery__img-container--row-2"
+          ></div>
         </div>
       </div>
     </main>
