--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="section__content section__content--two-cols">
             <div class="container">
               <h2 class="section__title section__title--two-cols green">
-                Graphic design
+                Graphic Design
               </h2>
               <p class="section__text green">
                 Great design makes you memorable. We deliver artwork that
@@ -157,7 +157,7 @@
               />
               <p class="test__quote">
                 Incredible end result! Our sales increased over 400% when we
-                worked with Sunnyside. <br />Highly recommended!
+                worked with Sunnyside. Highly recommended!
               </p>
               <p class="test__name">Jennie F.</p>
               <p class="test__job">Business Owner</p>
