--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </nav>
         </header>
 
-        <div class="jumbo">
+        <section class="jumbo">
           <h1 class="jumbo__title">We are creatives</h1>
           <img
             src="images/icon-arrow-down.svg"
